fixed alignments of elements for mobile versions, added link box to Contact page

--- a/css/style.css
+++ b/css/style.css
@@ -42,20 +42,19 @@ html {
 }
 
 .headshot {
-  float: center;
   width: 80%;
   height: auto;
+  margin-left: 10%;
+  margin-top: 0.5%;  
   border-radius: 30px;
   line-height: 1;
-  padding-top: 1%;
-  margin-top: 0.5%;
-  margin-left: 10%;
+  padding-top: 1.5%;
+  padding-bottom: 1%;
   background-color: #0009;
   text-align: center;
 }
 
 .about {
-  float: center;
   border-radius: 30px;
   line-height: 2;
   padding-top: 1%;
@@ -214,7 +213,7 @@ footer{
 
   .container{
     grid-template-columns: 1fr;
-    grid-template-rows: .1fr 1fr 0.5fr;
+    grid-template-rows: .01fr 0.1fr 0.05fr;
     grid-template-areas:
     "nav"
     "main"
@@ -222,17 +221,17 @@ footer{
   }
 
   .about{
+    margin-top: 10%;
     font-size: 2.8rem;
   }
 
   .headshot{
     margin-top: 10%;
-    margin-left: 8rem;
+    margin-left: 7rem;
   }
 
   .smallwide{
     width: 75%;
-    height: auto;
   }
 
   .hamburger{
@@ -268,13 +267,17 @@ footer{
   }
 
   .nav-menu.active{
-    top: 60px;
+    top: 69px;
+    padding-bottom: 5px;
   }
 
   .maincontain.active{
-    margin-top: 90px;
+    margin-top: 105px;
     transition: 0.3s;
   }
+
+
+/* Contact specific */
 
 
   .search input{
@@ -296,10 +299,11 @@ footer{
   .contact {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 1fr 1fr;
+    grid-template-rows: 0.2fr 0.5fr 0.1fr;
     grid-template-areas:
     "maillist"
-    "contact";
+    "contact"
+    "footer";
     margin-top: 10%;
   }
 
@@ -323,7 +327,7 @@ footer{
 
   .navbar ul{
     margin-left: 0%;
-    margin-top: 4rem;
+    margin-top: 3.35rem;
   }
 
   .navbar ul li{
@@ -340,11 +344,12 @@ footer{
 
   .navbar.active {
     margin-bottom: 100px;
+    margin-top: 10px;
     transition: 0.3s;
   }
 
   .nav-menu.active{
-    top: 0.0001px;
+    top: 0.000000001px;
   }
 
   .about{
